Added:Modified and add msg queue
